--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -6,7 +6,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
