--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -1,6 +1,7 @@
 {
   "name": "apollo-angular-cache-ngrx",
-  "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
+  "author":
+    "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
@@ -16,13 +17,15 @@
     "bundle": "rollup -c rollup.config.js",
     "test": "npm run test-only",
     "test-only": "jest --config jest.config.js",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
+    "lint":
+      "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
     "postbuild": "npm run bundle",
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
+    "@angular/core": "^4.3.0 || ^5.0.0",
     "@ngrx/store": "^4.0.0",
+    "@ngrx/entity": "^4.1.0",
     "rxjs": "^5.0.1"
   },
   "devDependencies": {
@@ -50,7 +53,7 @@
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "apollo-cache": "^1.0.0",
-    "apollo-cache-inmemory": "^1.1.0-beta.1"
+    "apollo-cache": "^1.1.0",
+    "apollo-cache-inmemory": "^1.1.5"
   }
 }
