--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -7,7 +7,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.1",
+  "version": "1.0.2-beta.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -26,7 +26,7 @@
     "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
     "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
     "apollo-link": "^1.0.0",
-    "graphql": "^0.11.2"
+    "graphql": "^0.11.3 || ^0.12.3"
   },
   "devDependencies": {
     "@angular/animations": "^4.4.4",
