--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "start": "hexo serve",
-    "build": "hexo generate"
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "test": "npm run clean; npm run build"
   }
 }
