refactor(http): apply changes of Request from http-common

--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -7,7 +7,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.2-beta.0",
+  "version": "1.0.2-beta.1",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -29,7 +29,7 @@
     "graphql": "^0.11.3 || ^0.12.3"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "^1.0.0"
+    "apollo-angular-link-http-common": "^1.0.0-beta.0"
   },
   "devDependencies": {
     "@angular/animations": "^4.4.4",
