--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -7,7 +7,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -30,7 +30,7 @@
   "dependencies": {
     "apollo-link": "^1.0.0",
     "apollo-link-batch": "^1.1.1",
-    "apollo-angular-link-http-common": "^1.0.0"
+    "apollo-angular-link-http-common": "^1.0.0-beta.0"
   },
   "devDependencies": {
     "@angular/animations": "^4.4.4",
