--- a/packages/apollo-angular-link-http-batch/tsconfig.json
+++ b/packages/apollo-angular-link-http-batch/tsconfig.json
@@ -3,5 +3,10 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "build"
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "tests/**/*.ts",
+    "node_modules/zone.js/dist/zone.js.d.ts"
+  ]
 }
