--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apollo-angular-link-http-batch",
+  "description": "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
   "author":
     "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
@@ -29,7 +30,7 @@
   },
   "dependencies": {
     "apollo-link": "^1.0.0",
-    "apollo-link-batch": "^1.1.1",
+    "apollo-link-batch": "^1.1.2",
     "apollo-angular-link-http-common": "^1.0.0-beta.0"
   },
   "devDependencies": {
