--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apollo-angular",
+  "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
   "version": "1.0.1",
   "author":
     "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
