--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apollo-angular-link-http",
+  "description": "An Apollo Link to allow sending a single http request per operation.",
   "author":
     "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
@@ -7,7 +8,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.2-beta.0",
+  "version": "1.0.2-beta.1",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -27,6 +28,9 @@
     "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
     "apollo-link": "^1.0.0",
     "graphql": "^0.11.3 || ^0.12.3"
+  },
+  "dependencies": {
+    "apollo-angular-link-http-common": "^1.0.0-beta.0"
   },
   "devDependencies": {
     "@angular/animations": "^4.4.4",
