--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "hexo": {
     "version": "3.5.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "handlebars": "^4.0.5",
     "hexo": "3.5.0",
     "hexo-generator-archive": "0.1.5",
