--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,8 @@
     "version": "3.5.0"
   },
   "devDependencies": {
+    "apollo-hexo-config": "^1.0.2",
+    "chexo": "^1.0.4",
     "handlebars": "^4.0.5",
     "hexo": "3.5.0",
     "hexo-generator-archive": "0.1.5",
@@ -17,11 +19,12 @@
     "hexo-renderer-marked": "0.3.2",
     "hexo-server": "0.3.1",
     "lodash": "^4.13.1",
+    "meteor-theme-hexo": "^1.0.1",
     "showdown": "^1.4.2"
   },
   "scripts": {
-    "start": "hexo serve",
-    "build": "hexo generate",
+    "start": "npm run build && chexo apollo-hexo-config -- server",
+    "build": "chexo apollo-hexo-config -- generate",
     "clean": "hexo clean",
     "test": "npm run clean; npm run build"
   }
