--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -26,7 +26,7 @@
   "peerDependencies": {
     "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
     "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
-    "graphql": "^0.11.3 || ^0.12.3"
+    "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
   "dependencies": {
     "apollo-link": "^1.0.0",
