--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -27,7 +27,7 @@
     "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
     "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
     "apollo-link": "^1.0.0",
-    "graphql": "^0.11.3 || ^0.12.3"
+    "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
   "dependencies": {
     "apollo-angular-link-http-common": "^1.0.0-beta.0"
