--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -8,7 +8,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.2-beta.1",
+  "version": "1.0.2",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -30,7 +30,7 @@
     "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "^1.0.0-beta.0"
+    "apollo-angular-link-http-common": "~1.0.0"
   },
   "devDependencies": {
     "@angular/animations": "^4.4.4",
