--- a/docs/package.json
+++ b/docs/package.json
@@ -15,8 +15,7 @@
     "hexo-renderer-marked": "0.3.2",
     "hexo-server": "0.3.1",
     "lodash": "^4.13.1",
-    "meteor-theme-hexo": "^1.0.1",
-    "showdown": "^1.4.2"
+    "meteor-theme-hexo": "^1.0.1"
   },
   "scripts": {
     "start": "npm run build && chexo apollo-hexo-config -- server",
