--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -24,19 +24,19 @@
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^4.0.0 || ^5.0.0-rc.0",
+    "@angular/core": "^6.0.0-rc.0",
     "apollo-client": "^2.0.0",
     "apollo-link": "^1.0.0",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.8.4"
+    "rxjs": "^6.0.0-rc.0",
+    "zone.js": "~0.8.20"
   },
   "devDependencies": {
-    "@angular/common": "4.4.6",
-    "@angular/compiler": "4.4.6",
-    "@angular/compiler-cli": "4.4.6",
-    "@angular/core": "4.4.6",
-    "@angular/platform-browser": "4.4.6",
-    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/common": "6.0.0-rc.3",
+    "@angular/compiler": "6.0.0-rc.3",
+    "@angular/compiler-cli": "6.0.0-rc.3",
+    "@angular/core": "6.0.0-rc.3",
+    "@angular/platform-browser": "6.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "6.0.0-rc.3",
     "@types/graphql": "0.13.0",
     "@types/jest": "22.2.2",
     "@types/zen-observable": "0.5.3",
@@ -48,9 +48,9 @@
     "jest": "21.2.1",
     "jest-zone-patch": "0.0.8",
     "rollup": "0.57.1",
-    "rxjs": "5.5.8",
+    "rxjs": "^6.0.0-rc.0",
     "ts-jest": "22.4.2",
-    "typescript": "2.8.1",
+    "typescript": "2.7.2",
     "zone.js": "0.8.26"
   }
 }
