--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -24,8 +24,8 @@
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^4.3.0 || ^5.0.0",
-    "@ngrx/store": "^5.0.0",
+    "@angular/core": "^6.0.0-rc.0",
+    "@ngrx/store": "^6.0.0-beta.1",
     "rxjs": "^6.0.0-rc.0"
   },
   "devDependencies": {
@@ -37,7 +37,7 @@
     "@angular/http": "6.0.0-rc.3",
     "@angular/platform-browser": "6.0.0-rc.3",
     "@angular/platform-browser-dynamic": "6.0.0-rc.3",
-    "@ngrx/store": "5.2.0",
+    "@ngrx/store": "6.0.0-beta.1",
     "@types/graphql": "0.13.0",
     "@types/jest": "22.2.2",
     "@types/zen-observable": "0.5.3",
