--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -1,6 +1,7 @@
 {
   "name": "apollo-angular-link-http-batch",
-  "description": "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
+  "description":
+    "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
   "author":
     "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
@@ -24,8 +25,8 @@
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
-    "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
+    "@angular/core": "^6.0.0-rc.0",
+    "@angular/common": "^6.0.0-rc.0",
     "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
   "dependencies": {
