--- a/packages/apollo-angular-link-http-common/package.json
+++ b/packages/apollo-angular-link-http-common/package.json
@@ -24,8 +24,8 @@
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
-    "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
+    "@angular/core": "^6.0.0-rc.0",
+    "@angular/common": "^6.0.0-rc.0",
     "apollo-link": "^1.0.0",
     "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
