--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,9 +1,12 @@
 {
   "name": "apollo-angular",
-  "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
+  "description":
+    "Use your GraphQL data in your Angular app, with the Apollo Client",
   "version": "1.0.1",
-  "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
+  "author":
+    "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
+  "sideEffects": false,
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
@@ -17,7 +20,8 @@
     "bundle": "rollup -c rollup.config.js",
     "test": "npm run test-only",
     "test-only": "jest --config jest.config.js",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
+    "lint":
+      "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
     "postbuild": "npm run bundle",
     "deploy": "../../scripts/deploy.sh"
   },
