--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -1,6 +1,7 @@
 {
   "name": "apollo-angular-link-http-batch",
-  "description": "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
+  "description":
+    "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
   "author":
     "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
@@ -8,7 +9,7 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
