feat(core): testing tools

--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-	"private": true,
-	"license": "MIT",
-	"scripts": {
-		"bootstrap": "npm i && lerna bootstrap",
-		"postbootstrap": "npm run build",
-		"prebuild": "rimraf packages/*/build/ packages/*/coverage/",
-		"build": "lerna run -- build",
-		"test": "lerna run -- test",
-		"prelint": "npm run prettier",
-		"lint": "lerna run -- lint",
-		"prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\"",
-		"deploy": "lerna run -- deploy",
-		"coverage": "codecov",
-		"precommit": "lint-staged",
-		"commitmsg": "commitlint -e"
-	},
-	"devDependencies": {
-		"@commitlint/cli": "6.1.3",
-		"@commitlint/config-angular": "6.1.3",
-		"@types/jest": "22.2.3",
-		"codecov": "3.0.0",
-		"husky": "0.14.3",
-		"jest": "21.2.1",
-		"lerna": "2.10.1",
-		"lint-staged": "7.0.4",
-		"prettier": "1.11.1",
-		"rimraf": "2.6.2",
-		"rollup": "0.57.1",
-		"tslint": "5.9.1",
-		"typescript": "2.8.1"
-	}
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+    "bootstrap": "npm i && lerna bootstrap",
+    "postbootstrap": "npm run build",
+    "prebuild": "rimraf packages/*/build/ packages/*/coverage/",
+    "build": "lerna run build",
+    "test": "lerna run test",
+    "prelint": "npm run prettier",
+    "lint": "lerna run lint",
+    "prettier":
+      "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\"",
+    "deploy": "lerna run deploy",
+    "coverage": "codecov",
+    "precommit": "lint-staged",
+    "commitmsg": "commitlint -e"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "6.1.3",
+    "@commitlint/config-angular": "6.1.3",
+    "@types/jest": "22.2.3",
+    "codecov": "3.0.0",
+    "husky": "0.14.3",
+    "jest": "21.2.1",
+    "lerna": "2.10.1",
+    "lint-staged": "7.0.4",
+    "prettier": "1.11.1",
+    "rimraf": "2.6.2",
+    "rollup": "0.57.1",
+    "tslint": "5.9.1",
+    "typescript": "2.8.1"
+  }
 }
