--- a/packages/apollo-angular/tsconfig.json
+++ b/packages/apollo-angular/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "rootDir": ".",
+    "baseUrl": ".",
     "outDir": "build"
   },
   "include": [
