--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -26,8 +26,8 @@
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0-rc.0",
-    "@angular/common": "^6.0.0-rc.0",
+    "@angular/core": "^6.0.0",
+    "@angular/common": "^6.0.0",
     "apollo-link": "^1.0.0",
     "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
@@ -35,15 +35,15 @@
     "apollo-angular-link-http-common": "~1.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "6.0.0-rc.3",
-    "@angular/common": "6.0.0-rc.3",
-    "@angular/compiler": "6.0.0-rc.3",
-    "@angular/compiler-cli": "6.0.0-rc.3",
-    "@angular/core": "6.0.0-rc.3",
-    "@angular/http": "6.0.0-rc.3",
-    "@angular/platform-browser": "6.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "6.0.0-rc.3",
-    "@angular/platform-server": "6.0.0-rc.3",
+    "@angular/animations": "6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/http": "6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
     "@types/graphql": "0.13.0",
     "@types/jest": "22.2.3",
     "@types/zen-observable": "0.5.3",
@@ -55,7 +55,7 @@
     "jest": "21.2.1",
     "jest-zone-patch": "0.0.8",
     "rollup": "0.57.1",
-    "rxjs": "^6.0.0-rc.0",
+    "rxjs": "6.1.0",
     "ts-jest": "22.4.2",
     "typescript": "2.7.2",
     "zone.js": "0.8.26"
