--- a/packages/apollo-angular-link-headers/package.json
+++ b/packages/apollo-angular-link-headers/package.json
@@ -1,8 +1,11 @@
 {
   "name": "apollo-angular-link-headers",
-  "description": "An Apollo Link to easily transform headers from being a key-value object to an instance of HttpHeaders. Great combination with apollo-angular-link-http.",
-  "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
+  "description":
+    "An Apollo Link to easily transform headers from being a key-value object to an instance of HttpHeaders. Great combination with apollo-angular-link-http.",
+  "author":
+    "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
+  "sideEffects": false,
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
@@ -17,17 +20,18 @@
     "bundle": "rollup -c rollup.config.js",
     "test": "npm run test-only",
     "test-only": "jest --config jest.config.js",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
+    "lint":
+      "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
     "postbuild": "npm run bundle",
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
+    "@angular/common": "^6.0.0",
     "apollo-link": "^1.0.0"
   },
   "devDependencies": {
-    "@angular/common": "4.4.6",
-    "@angular/core": "4.4.6",
+    "@angular/common": "6.0.0",
+    "@angular/core": "6.0.0",
     "@types/graphql": "0.13.0",
     "@types/jest": "22.2.3",
     "@types/zen-observable": "0.5.3",
@@ -37,6 +41,6 @@
     "jest": "21.2.1",
     "rollup": "0.57.1",
     "ts-jest": "22.4.2",
-    "typescript": "2.8.1"
+    "typescript": "2.7.2"
   }
 }
