--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "bootstrap": "npm i && lerna bootstrap",
+    "postinstall": "npm run bootstrap",
+    "bootstrap": "lerna bootstrap",
     "postbootstrap": "npm run build",
     "prebuild": "rimraf packages/*/build/ packages/*/coverage/",
     "build": "lerna run -- build",
