--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -22,9 +22,9 @@
     "test": "npm run test-only",
     "test-only": "jest --config jest.config.js",
     "lint":
-      "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests, testing}/**/*.ts",
+      "tslint -c ../../tslint.json -p tsconfig.json {src,tests, testing}/**/*.ts",
     "lint:testing":
-      "tslint -c ../../tslint.json -p testings/tsconfig.json --type-check {src,tests}/**/*.ts",
+      "tslint -c ../../tslint.json -p testing/tsconfig.json {src,tests}/**/*.ts",
     "postlint": "npm run lint:testing",
     "postbuild": "npm run bundle && npm run build:testing",
     "deploy": "../../scripts/deploy.sh ./scripts/testing.sh"
