--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -1,16 +1,14 @@
 {
   "name": "apollo-angular-link-http-batch",
-  "description":
-    "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
-  "author":
-    "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
+  "description": "An Apollo Link to combine multiple GraphQL operations into single HTTP request.",
+  "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -32,7 +30,7 @@
   "dependencies": {
     "apollo-link": "^1.0.0",
     "apollo-link-batch": "^1.1.2",
-    "apollo-angular-link-http-common": "~1.0.0"
+    "apollo-angular-link-http-common": "~1.1.0"
   },
   "devDependencies": {
     "@angular/animations": "6.0.1",
