--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -1,16 +1,14 @@
 {
   "name": "apollo-angular-link-http",
-  "description":
-    "An Apollo Link to allow sending a single http request per operation.",
-  "author":
-    "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
+  "description": "An Apollo Link to allow sending a single http request per operation.",
+  "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "apollographql/apollo-angular"
@@ -31,7 +29,7 @@
     "graphql": "^0.11.3 || ^0.12.3 || ^0.13.0"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "~1.0.0"
+    "apollo-angular-link-http-common": "~1.1.0"
   },
   "devDependencies": {
     "@angular/animations": "6.0.1",
