--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-angular-boost",
-  "description": "The easiest way to get started with Apollo Client",
+  "description": "The easiest way to get started with Apollo Client in Angular",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "main": "./build/bundle.umd.js",
@@ -27,24 +27,24 @@
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.2.1",
-    "apollo-angular": "^1.1.0",
+    "apollo-angular": "~1.1.0",
     "apollo-client": "^2.3.1",
-    "apollo-angular-link-http": "^1.1.0",
+    "apollo-angular-link-http": "~1.1.0",
     "apollo-link": "^1.2.2",
     "apollo-link-error": "^1.0.9",
     "apollo-link-state": "^0.4.1",
     "graphql-tag": "^2.9.2"
   },
   "devDependencies": {
-    "@angular/animations": "6.0.2",
-    "@angular/common": "6.0.2",
-    "@angular/compiler": "6.0.2",
-    "@angular/compiler-cli": "6.0.2",
-    "@angular/core": "6.0.2",
-    "@angular/http": "6.0.2",
-    "@angular/platform-browser": "6.0.2",
-    "@angular/platform-browser-dynamic": "6.0.2",
-    "@angular/platform-server": "6.0.2",
+    "@angular/animations": "6.0.3",
+    "@angular/common": "6.0.3",
+    "@angular/compiler": "6.0.3",
+    "@angular/compiler-cli": "6.0.3",
+    "@angular/core": "6.0.3",
+    "@angular/http": "6.0.3",
+    "@angular/platform-browser": "6.0.3",
+    "@angular/platform-browser-dynamic": "6.0.3",
+    "@angular/platform-server": "6.0.3",
     "@types/graphql": "0.13.1",
     "@types/jest": "22.2.3",
     "@types/zen-observable": "0.5.3",
@@ -52,7 +52,7 @@
     "jest": "22.4.4",
     "jest-zone-patch": "0.0.8",
     "rollup": "0.59.2",
-    "rxjs": "6.1.0",
+    "rxjs": "6.2.0",
     "ts-jest": "22.4.6",
     "typescript": "2.7.2",
     "zone.js": "0.8.26"
