--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -47,6 +47,7 @@
     "rollup": "0.59.2",
     "rxjs": "6.1.0",
     "ts-jest": "22.4.6",
+    "typescript": "2.7.2",
     "zone.js": "0.8.26"
   },
   "dependencies": {
