--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -3,6 +3,7 @@
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
   "version": "1.1.0",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
+  "license": "MIT",
   "sideEffects": false,
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
