--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -46,6 +46,7 @@
     "jest-zone-patch": "0.0.8",
     "rollup": "0.59.3",
     "rxjs": "6.2.0",
+    "rxjs-compat": "^6.2.0",
     "ts-jest": "22.4.6",
     "typescript": "2.7.2",
     "zone.js": "0.8.26"
