--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -16,10 +16,10 @@
   "scripts": {
     "build": "./node_modules/.bin/ngc -p tsconfig.build.json",
     "bundle": "rollup -c rollup.config.js",
-    "test": "npm run test-only",
+    "test": "yarn test-only",
     "test-only": "jest --config jest.config.js",
     "lint": "tslint -c ../../tslint.json -p tsconfig.json {src,tests}/*.ts",
-    "postbuild": "npm run bundle",
+    "postbuild": "yarn bundle",
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
@@ -33,26 +33,25 @@
     "apollo-angular-link-http-common": "~1.1.0"
   },
   "devDependencies": {
-    "@angular/animations": "6.0.4",
-    "@angular/common": "6.0.4",
-    "@angular/compiler": "6.0.4",
-    "@angular/compiler-cli": "6.0.4",
-    "@angular/core": "6.0.4",
-    "@angular/http": "6.0.4",
-    "@angular/platform-browser": "6.0.4",
-    "@angular/platform-browser-dynamic": "6.0.4",
-    "@angular/platform-server": "6.0.4",
+    "@angular/animations": "6.0.5",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/platform-server": "6.0.5",
     "@types/graphql": "0.13.1",
-    "@types/jest": "23.0.2",
-    "@types/zen-observable": "0.5.3",
+    "@types/jest": "23.1.0",
     "apollo-cache-inmemory": "1.2.4",
     "apollo-client": "2.3.4",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "jest": "23.1.0",
     "jest-zone-patch": "0.0.8",
-    "rollup": "0.60.2",
-    "rxjs": "6.2.0",
+    "rollup": "0.60.7",
+    "rxjs": "6.2.1",
     "ts-jest": "22.4.6",
     "typescript": "2.7.2",
     "zone.js": "0.8.26"
