--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -18,15 +18,15 @@
     "build:testing": "./node_modules/.bin/ngc -p testing/tsconfig.build.json",
     "bundle": "rollup -c rollup.config.js",
     "bundle:testing": "rollup -c testing/rollup.config.js",
-    "test": "npm run test-only",
-    "posttest": "npm run test:testing",
+    "test": "yarn test-only",
+    "posttest": "yarn test:testing",
     "test-only": "jest --config jest.config.js",
     "test:testing": "jest --config testing/jest.config.js",
     "lint": "tslint -c ../../tslint.json -p tsconfig.json {src,tests, testing}/**/*.ts",
     "lint:testing": "tslint -c ../../tslint.json -p testing/tsconfig.json {src,tests}/**/*.ts",
-    "postlint": "npm run lint:testing",
-    "postbuild": "npm run bundle && npm run build:testing",
-    "postbuild:testing": "npm run bundle:testing",
+    "postlint": "yarn lint:testing",
+    "postbuild": "yarn bundle && yarn build:testing",
+    "postbuild:testing": "yarn bundle:testing",
     "deploy": "../../scripts/deploy.sh ./scripts/testing.sh"
   },
   "peerDependencies": {
@@ -37,15 +37,14 @@
     "zone.js": "~0.8.20"
   },
   "devDependencies": {
-    "@angular/common": "6.0.4",
-    "@angular/compiler": "6.0.4",
-    "@angular/compiler-cli": "6.0.4",
-    "@angular/core": "6.0.4",
-    "@angular/platform-browser": "6.0.4",
-    "@angular/platform-browser-dynamic": "6.0.4",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
     "@types/graphql": "0.13.1",
-    "@types/jest": "23.0.2",
-    "@types/zen-observable": "0.5.3",
+    "@types/jest": "23.1.0",
     "apollo-cache-inmemory": "1.2.4",
     "apollo-client": "2.3.4",
     "apollo-link": "1.2.2",
@@ -53,8 +52,8 @@
     "graphql-tag": "2.9.2",
     "jest": "23.1.0",
     "jest-zone-patch": "0.0.8",
-    "rollup": "0.60.2",
-    "rxjs": "6.2.0",
+    "rollup": "0.60.7",
+    "rxjs": "6.2.1",
     "ts-jest": "22.4.6",
     "typescript": "2.7.2",
     "zone.js": "0.8.26"
