--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
   "lerna": "2.4.0",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
