docs(boost): more

--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -26,34 +26,34 @@
     "@angular/common": "^6.0.0"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.2.1",
-    "apollo-angular": "~1.1.0",
+    "apollo-cache-inmemory": "~1.2.5",
+    "apollo-angular": "~1.1.2",
     "apollo-client": "^2.3.1",
-    "apollo-angular-link-http": "~1.1.0",
-    "apollo-link": "^1.2.2",
-    "apollo-link-error": "^1.0.9",
-    "apollo-link-state": "^0.4.1",
-    "graphql-tag": "^2.9.2"
+    "apollo-angular-link-http": "~1.1.1",
+    "apollo-link": "~1.2.2",
+    "apollo-link-error": "~1.1.0",
+    "apollo-link-state": "~0.4.1",
+    "graphql-tag": "~2.9.2"
   },
   "devDependencies": {
-    "@angular/animations": "6.0.3",
-    "@angular/common": "6.0.3",
-    "@angular/compiler": "6.0.3",
-    "@angular/compiler-cli": "6.0.3",
-    "@angular/core": "6.0.3",
-    "@angular/http": "6.0.3",
-    "@angular/platform-browser": "6.0.3",
-    "@angular/platform-browser-dynamic": "6.0.3",
-    "@angular/platform-server": "6.0.3",
-    "@types/graphql": "0.13.1",
-    "@types/jest": "22.2.3",
+    "@angular/animations": "6.0.7",
+    "@angular/common": "6.0.7",
+    "@angular/compiler": "6.0.7",
+    "@angular/compiler-cli": "6.0.7",
+    "@angular/core": "6.0.7",
+    "@angular/http": "6.0.7",
+    "@angular/platform-browser": "6.0.7",
+    "@angular/platform-browser-dynamic": "6.0.7",
+    "@angular/platform-server": "6.0.7",
+    "@types/graphql": "0.13.3",
+    "@types/jest": "23.1.4",
     "@types/zen-observable": "0.5.3",
     "graphql": "0.13.2",
-    "jest": "22.4.4",
+    "jest": "23.3.0",
     "jest-zone-patch": "0.0.8",
-    "rollup": "0.59.2",
+    "rollup": "0.62.0",
     "rxjs": "6.2.0",
-    "ts-jest": "22.4.6",
+    "ts-jest": "23.0.0",
     "typescript": "2.7.2",
     "zone.js": "0.8.26"
   }
