--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -18,15 +18,15 @@
     "build:testing": "./node_modules/.bin/ngc -p testing/tsconfig.build.json",
     "bundle": "rollup -c rollup.config.js",
     "bundle:testing": "rollup -c testing/rollup.config.js",
-    "test": "npm run test-only",
-    "posttest": "npm run test:testing",
+    "test": "yarn test-only",
+    "posttest": "yarn test:testing",
     "test-only": "jest --config jest.config.js",
     "test:testing": "jest --config testing/jest.config.js",
-    "lint": "tslint -c ../../tslint.json -p tsconfig.json {src,tests, testing}/**/*.ts",
-    "lint:testing": "tslint -c ../../tslint.json -p testing/tsconfig.json {src,tests}/**/*.ts",
-    "postlint": "npm run lint:testing",
-    "postbuild": "npm run bundle && npm run build:testing",
-    "postbuild:testing": "npm run bundle:testing",
+    "lint": "tslint -c ../../tslint.json -p tsconfig.json {src,tests}/**/*.ts",
+    "lint:testing": "tslint -c ../../tslint.json -p testing/tsconfig.json testing/{src,tests}/**/*.ts",
+    "postlint": "yarn lint:testing",
+    "postbuild": "yarn bundle && yarn build:testing",
+    "postbuild:testing": "yarn bundle:testing",
     "deploy": "../../scripts/deploy.sh ./scripts/testing.sh"
   },
   "peerDependencies": {
